--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,12 +67,14 @@ android {
         }
     }
     buildTypes {
-       if (keystorePropertiesFile.exists()) {
-            signingConfig signingConfigs.release
+       if (!keystorePropertiesFile.exists()) {
             println "Signing with key.properties"
+            signingConfig signingConfigs.release
+
         } else {
-            signingConfig signingConfigs.debug
             println "Signing with debug keys"
+            signingConfig signingConfigs.debug
+            
         }
     }
 }
