--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -26,5 +26,11 @@ jobs:
           flutter-version: '3.16.3'
       - run: flutter pub get
       # - run: flutter test test_driver/integration_test.dart
+      
+      - run: | 
+          echo flutter.minSdkVersion=21 > ./local.properties
+          echo flutter.targetSdkVersion=30 > ./local.properties
+          echo flutter.compileSdkVersion=30 > ./local.properties
+      
       # - run: flutter build apk
       - run: flutter build appbundle
