--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -28,9 +28,10 @@ jobs:
       # - run: flutter test test_driver/integration_test.dart
       
       - run: | 
-          echo flutter.minSdkVersion=21 >> /home/runner/work/chemobile/chemobile/android/local.properties
-          echo flutter.targetSdkVersion=30 >> /home/runner/work/chemobile/chemobile/android/local.properties
-          echo flutter.compileSdkVersion=30 >> /home/runner/work/chemobile/chemobile/android/local.properties
+          echo "" >> ./android/local.properties
+          echo flutter.minSdkVersion=21 >> ./android/local.properties
+          echo flutter.targetSdkVersion=30 >> ./android/local.properties
+          echo flutter.compileSdkVersion=30 >> ./android/local.properties
           cat /home/runner/work/chemobile/chemobile/android/local.properties
           pwd
       
