--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -36,4 +36,10 @@ jobs:
           pwd
       
       # - run: flutter build apk
-      - run: flutter build appbundle --debug
+      - run: flutter build appbundle
+      
+#      - name: Upload artefact
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: appbundle
+#          path: build/app/outputs/bundle/
