dev: escape secret

--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -39,7 +39,7 @@ jobs:
           flutter drive \
             --dart-define=ELN_USERNAME=complat.user1@eln.edu \
             --dart-define=ELN_PASSWORD=@complat \
-            --dart-define=ELN_URL=${{TEST_INSTANCE_URL}} \
+            --dart-define=ELN_URL=\${{TEST_INSTANCE_URL}} \
             --driver=test_driver/integration_test.dart \
             --target=integration_test/app_test.dart
 
