--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -34,12 +34,16 @@ jobs:
           echo flutter.targetSdkVersion=30 >> ./android/local.properties
           echo flutter.compileSdkVersion=30 >> ./android/local.properties
 
-
-      - run: |
+       
+        
+      - name: test
+        env:
+          TEST_INSTANCE_URL: ${{ secrets.TEST_INSTANCE_URL }}
+        run: |
           flutter drive \
             --dart-define=ELN_USERNAME=complat.user1@eln.edu \
             --dart-define=ELN_PASSWORD=@complat \
-            --dart-define=ELN_URL=\${{ secrets.TEST_INSTANCE_URL }} \
+            --dart-define=ELN_URL=$TEST_INSTANCE_URL
             --driver=test_driver/integration_test.dart \
             --target=integration_test/app_test.dart
 
