--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -47,10 +47,12 @@ jobs:
 #            --target=integration_test/app_test.dart
 
       - name: set key properties
+        #env:
+        #  TEST_INSTANCE_URL: ${{ secrets.TEST_INSTANCE_URL }}
         run: |
-          echo keyPassword=\${{ secrets.KEY_PASSWORD }} > ./android/key.properties
-          echo storePassword=\${{ secrets.STORE_PASSWORD }} >> ./android/key.properties
-          echo keyAlias=\${{ secrets.KEY_ALIAS }} >> ./android/key.properties
+          echo keyPassword="${{ secrets.KEY_PASSWORD }}" > ./android/key.properties
+          echo storePassword=${{ secrets.STORE_PASSWORD }}" >> ./android/key.properties
+          echo keyAlias="${{ secrets.KEY_ALIAS }}" >> ./android/key.properties
           echo storeFile=upload-keystore.jks >> ./android/key.properties
           echo "${{ secrets.KEYS_JKS }}" | base64 --decode > ./android/app/upload-keystore.jks
         
