--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,22 +32,22 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.8
   camera: ^0.10.0+1
   decimal: ^2.1.0
-  flutter_bloc: ^8.0.1
+  flutter_bloc: ^8.1.5
   flutter_vibrate: ^1.3.0
-  hydrated_bloc: ^9.0.0
-  image: ^3.1.3
-  intl: ^0.18.1
+  hydrated_bloc: ^9.1.5
+  image: ^4.1.7
+  intl: ^0.19.0
   path_provider: ^2.0.9
-  uuid: ^3.0.5
+  uuid: ^4.4.0
   jwt_decode: ^0.3.1
-  http: ^1.0.0
-  google_mlkit_text_recognition: ^0.5.0
-  google_mlkit_commons: ^0.2.0
+  http: ^1.2.1
+  google_mlkit_text_recognition: ^0.11.0
+  google_mlkit_commons: ^0.6.1
   json_annotation: ^4.8.1
-  flutter_svg: ^2.0.7
+  flutter_svg: ^2.0.10+1
   jovial_svg: ^1.1.16
 
 dev_dependencies:
