--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,23 +32,23 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
   camera: ^0.10.0+1
+  cupertino_icons: ^1.0.8
   decimal: ^2.1.0
-  flutter_bloc: ^8.0.1
+  flutter_bloc: ^8.1.5
+  flutter_svg: ^2.0.10+1
   flutter_vibrate: ^1.3.0
-  hydrated_bloc: ^9.0.0
-  image: ^3.1.3
-  intl: ^0.18.1
-  path_provider: ^2.0.9
-  uuid: ^3.0.5
-  jwt_decode: ^0.3.1
-  http: ^1.0.0
-  google_mlkit_text_recognition: ^0.5.0
-  google_mlkit_commons: ^0.2.0
-  json_annotation: ^4.8.1
-  flutter_svg: ^2.0.7
+  google_mlkit_commons: ^0.7.1
+  google_mlkit_text_recognition: ^0.13.0
+  http: ^1.2.1
+  hydrated_bloc: ^9.1.5
+  image: ^4.1.7
+  intl: ^0.19.0
   jovial_svg: ^1.1.16
+  json_annotation: ^4.8.1
+  jwt_decode: ^0.3.1
+  path_provider: ^2.0.9
+  uuid: ^4.4.0
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +61,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.1
+  flutter_lints: ^3.0.2
   build_runner: ^2.0.0
   json_serializable: ^6.7.1
 
