--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -17,12 +17,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
-        with:
-          distribution: 'zulu'
-          java-version: '11'
       - uses: subosito/flutter-action@v2
         with:
+          channel: stable
           flutter-version: '3.22.2'
       - run: flutter pub get
       
