--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -80,7 +80,7 @@ jobs:
 
       # Upload generated apk to the artifacts.
       - name: Upload APK
-      - uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v4
         with:
           name: release-apk
           path: build/app/outputs/apk/release/app-release.apk
