--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -70,9 +70,17 @@ jobs:
 
       
       - run: flutter build appbundle
+      - run: flutter build apk --release
 
       - name: Upload aab artefact
         uses: actions/upload-artifact@v4
         with:
           name: appbundle
           path: build/app/outputs/bundle/release/app-release.aab
+
+      # Upload generated apk to the artifacts.
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: release-apk
+          path: build/app/outputs/apk/release/app-release.apk
